--- a/Poseidon-AngularFront/src/app/login-view/login-view.component.html
+++ b/Poseidon-AngularFront/src/app/login-view/login-view.component.html
@@ -1,9 +1,22 @@
-<section>
-    <img src="assets/logo.png" alt="">
-    <h1>Poseidon Inc - Trading App</h1>
-    <label for="username">Username</label>
-    <input type="text" name="username" id="username">
-    <label for="password">Password</label>
-    <input type="text" name="password" id="password">
-    <a>Login</a>
-</section>
+<form action="">
+	<mat-card>
+		<mat-card-header>
+			<mat-card-title>PoseidonInc - Trading App</mat-card-title>
+			<mat-card-subtitle>Welcome, sign in to your account.</mat-card-subtitle>
+		</mat-card-header>
+		<mat-card-content>
+			<form>
+				<mat-form-field appearance="outline">
+    			<mat-label>Username</mat-label>
+    			<input matInput>
+  			</mat-form-field>
+  			<mat-form-field appearance="outline">
+    			<mat-label>Password</mat-label>
+    			<input matInput>
+  			</mat-form-field>
+			  <button mat-raised-button color="primary">Login</button>
+			</form>
+			
+		</mat-card-content>
+	</mat-card>	
+</form>
