--- a/Poseidon-AngularFront/src/styles.css
+++ b/Poseidon-AngularFront/src/styles.css
@@ -1,11 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #303030; }
+table {
+  width: 100%;
 }
-body {
-    width: 100%;
-    min-height: 100vh;
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.example-spacer {
+  flex: 1 1 auto;
+}
+app-not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+div.notFoundButton {
+  display: flex;
+  gap: 0.5rem;
 }
