angular front-end

--- a/Poseidon-AngularFront/src/app/app.component.html
+++ b/Poseidon-AngularFront/src/app/app.component.html
@@ -25,6 +25,10 @@
       <mat-icon>gavel</mat-icon>
       <span>Rules</span>
     </button>
+    <button mat-menu-item [routerLink]="['users']">
+      <mat-icon>person</mat-icon>
+      <span>Users</span>
+    </button>
     <button mat-menu-item>
       <mat-icon>logout</mat-icon>
       <span>Logout</span>
