--- a/Poseidon-AngularFront/src/app/rule/rule-list/rule-list.component.html
+++ b/Poseidon-AngularFront/src/app/rule/rule-list/rule-list.component.html
@@ -17,19 +17,19 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row"></th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr *ngFor="let rule of ruleList">
+          <th scope="row">{{ rule.id }}</th>
+          <td>{{ rule.name }}</td>
+          <td>{{ rule.description }}</td>
+          <td>{{ rule.json }}</td>
+          <td>{{ rule.template }}</td>
+          <td>{{ rule.sqlStr }}</td>
+          <td>{{ rule.sqlPart }}</td>
           <td>
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" [routerLink]="['./update', rule.id]">
               <mat-icon>update</mat-icon>
             </button>
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" (click) = "onDelete(rule.id)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
@@ -38,6 +38,6 @@
     </table>
   </mat-card-content>
 </mat-card>
-<button mat-mini-fab color="primary" class="outBoxAddButton">
+<button mat-mini-fab color="primary" class="outBoxAddButton" [routerLink]="['./add']">
   <mat-icon>add</mat-icon>
 </button>
