--- a/Poseidon-AngularFront/src/app/dashboard/dashboard.component.html
+++ b/Poseidon-AngularFront/src/app/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
         <mat-icon>person</mat-icon>
         <span>Users</span>
       </button>
-      <button mat-menu-item>
+      <button mat-menu-item (click)="onLogout()">
         <mat-icon>logout</mat-icon>
         <span>Logout</span>
       </button>
