--- a/Poseidon-AngularFront/src/app/login/login.component.html
+++ b/Poseidon-AngularFront/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <mat-card>
 	<mat-card-header>
-		<mat-card-title>Hello, Login</mat-card-title>
+		<mat-card-title>Poseidon - Trading App</mat-card-title>
 		<mat-card-subtitle>Welcome, sign in to your account.</mat-card-subtitle>
 	</mat-card-header>
 	<mat-card-content>
@@ -11,7 +11,7 @@
   			</mat-form-field>
   			<mat-form-field appearance="outline">
     			<mat-label>Password</mat-label>
-    			<input [(ngModel)]="password" matInput name="password">
+    			<input [type]="hide ? 'password' : 'text'" [(ngModel)]="password" matInput name="password" type="password">
   			</mat-form-field>
 			<button mat-raised-button color="primary">Login</button>
   		</form>
