--- a/Poseidon-AngularFront/src/app/rule/rule-add/rule-add.component.html
+++ b/Poseidon-AngularFront/src/app/rule/rule-add/rule-add.component.html
@@ -3,33 +3,35 @@
     <mat-card-title>Rule's Add</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
+    <form (ngSubmit)="onAdd()">
       <mat-form-field appearance="outline">
         <mat-label>Name</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.name" matInput name="newRule.name">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Description</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.description" matInput name="newRule.description">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>JSON</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.json" matInput name="newRule.json">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Template</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.template" matInput name="newRule.template">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Sql Str</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.sqlStr" matInput name="newRule.sqlStr">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Sql Part</mat-label>
-        <input matInput>
+        <input [(ngModel)]="newRule.sqlPart" matInput name="newRule.sqlPart">
       </mat-form-field>
-      <button mat-raised-button color="warn" type="button">Back</button>
-      <button mat-raised-button color="primary">Add</button>
+      <div class="buttonGroup">
+        <button mat-raised-button color="warn" type="button" [routerLink]="['../']">Back</button>
+        <button mat-raised-button color="primary" type="submit">Add</button>
+      </div>
     </form>
   </mat-card-content>
 </mat-card>
