--- a/Poseidon-AngularFront/src/app/trade/trade-list/trade-list.component.html
+++ b/Poseidon-AngularFront/src/app/trade/trade-list/trade-list.component.html
@@ -14,16 +14,16 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row"></th>
-          <td></td>
-          <td></td>
-          <td></td>
+        <tr *ngFor="let trade of tradeList">
+          <th scope="row">{{ trade.id }}</th>
+          <td>{{ trade.account }}</td>
+          <td>{{ trade.type }}</td>
+          <td>{{ trade.buyQuantity | number }}</td>
           <td>
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" [routerLink]="['./update', trade.id]">
               <mat-icon>update</mat-icon>
             </button>
-            <button mat-icon-button color="primary">
+            <button mat-icon-button color="primary" (click) = "onDelete(trade.id)">
               <mat-icon>delete</mat-icon>
             </button>
           </td>
@@ -32,6 +32,7 @@
     </table>
   </mat-card-content>
 </mat-card>
-<button mat-mini-fab color="primary" class="outBoxAddButton">
+
+<button mat-mini-fab color="primary" class="outBoxAddButton" [routerLink]="['./add']">
   <mat-icon>add</mat-icon>
 </button>
