--- a/Poseidon-AngularFront/src/app/trade/trade-update/trade-update.component.html
+++ b/Poseidon-AngularFront/src/app/trade/trade-update/trade-update.component.html
@@ -3,25 +3,27 @@
     <mat-card-title>Trade's Update</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form>
+    <form (ngSubmit)="onUpdate()">
       <mat-form-field appearance="outline">
         <mat-label>Id</mat-label>
-        <input matInput>
+        <input [(ngModel)]="updateTrade.id" matInput name="updateTrade.id" disabled>
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Account</mat-label>
-        <input matInput>
+        <input [(ngModel)]="updateTrade.account" matInput name="updateTrade.account">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Type</mat-label>
-        <input matInput>
+        <input [(ngModel)]="updateTrade.type" matInput name="updateTrade.type">
       </mat-form-field>
       <mat-form-field appearance="outline">
         <mat-label>Buy Quantity</mat-label>
-        <input matInput>
+        <input [(ngModel)]="updateTrade.buyQuantity" matInput name="updateTrade.buyQuantity" type="number">
       </mat-form-field>
-      <button mat-raised-button color="warn" type="button">Back</button>
-      <button mat-raised-button color="primary">Add</button>
+      <div class="buttonGroup">
+        <button mat-raised-button color="warn" type="button" [routerLink]="['../../']">Back</button>
+        <button mat-raised-button color="primary" type="submit">Update</button>
+      </div>
     </form>
   </mat-card-content>
 </mat-card>
